// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. macros 1`] = `
"
import scope from './scope.macro'
const c = 10;
scope('should be removed');

      ↓ ↓ ↓ ↓ ↓ ↓

const c = 10;
"
`;

exports[`2. macros 1`] = `
"
import scope from './scope.macro'
function add(a, b) {
  const c = 10;
  console.log('Custom add function message');
  return a + b + c;
}

      ↓ ↓ ↓ ↓ ↓ ↓

function add(a, b) {
  const c = 10;
  console.log('Custom add function message');
  return a + b + c;
}
"
`;

exports[`3. macros 1`] = `
"
import scope from './scope.macro'
const add = function (a, b) {
  const c = 10;
  console.log('Custom add function message');
  return a + b + c;
};

      ↓ ↓ ↓ ↓ ↓ ↓

const add = function (a, b) {
  const c = 10;
  console.log('Custom add function message');
  return a + b + c;
};
"
`;

exports[`4. macros 1`] = `
"
import scope from './scope.macro'
const add = (a, b) => {
  const c = 10;
  console.log('Custom add function message');
  return a + b + c;
};

      ↓ ↓ ↓ ↓ ↓ ↓

const add = (a, b) => {
  const c = 10;
  console.log('Custom add function message');
  return a + b + c;
};
"
`;

exports[`5. macros 1`] = `
"
import scope from './scope.macro'
const add = a => b => {
  const c = 10;
  console.log('Custom add function message');
  return a + b + c;
};

      ↓ ↓ ↓ ↓ ↓ ↓

const add = a => b => {
  const c = 10;
  console.log('Custom add function message');
  return a + b + c;
};
"
`;

exports[`6. macros 1`] = `
"
import scope from './scope.macro'
function add(a, b) {
  const c = 10;
  scope('Custom add function message');
  return a + b + c;
}

      ↓ ↓ ↓ ↓ ↓ ↓

function add(a, b) {
  const c = 10;
  console.log('Custom add function message');

  if (typeof window !== 'undefined') {
    console.groupCollapsed('(2:0) function add(a, b) {...}');
  } else {
    console.log('▼ ', '(2:0) function add(a, b) {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Parameters');
  } else {
    console.log('| ▼ ', 'Parameters');
  }

  if (typeof window !== 'undefined') {
    console.log('(2:13)', 'a:', a);
  } else {
    console.log('| | ', '(2:13)', 'a:', a);
  }

  if (typeof window !== 'undefined') {
    console.log('(2:16)', 'b:', b);
  } else {
    console.log('| | ', '(2:16)', 'b:', b);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Parameters');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Variables');
  } else {
    console.log('| ▼ ', 'Variables');
  }

  if (typeof window !== 'undefined') {
    console.log('(3:8)', 'c:', c);
  } else {
    console.log('| | ', '(3:8)', 'c:', c);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Variables');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Return');
  } else {
    console.log('| ▼ ', 'Return');
  }

  if (typeof window !== 'undefined') {
    console.log('(5:9)', a + b + c);
  } else {
    console.log('| | ', '(5:9)', a + b + c);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Return');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Script');
  } else {
    console.log('| ▼ ', 'Script');
  }

  if (typeof window !== 'undefined') {
    console.log('(2:9) function add(a, b) {...}');
  } else {
    console.log('| | ', '(2:9) function add(a, b) {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Script');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('(2:0) function add(a, b) {...}');
  }

  return a + b + c;
}
"
`;

exports[`7. macros 1`] = `
"
import scope from './scope.macro';
const add = function(a, b) {
  const c = 10;
  scope('Custom add function message');
  return a + b + c;
}

      ↓ ↓ ↓ ↓ ↓ ↓

const add = function (a, b) {
  const c = 10;
  console.log('Custom add function message');

  if (typeof window !== 'undefined') {
    console.groupCollapsed('(2:6) const add = function(a, b) => {...}');
  } else {
    console.log('▼ ', '(2:6) const add = function(a, b) => {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Parameters');
  } else {
    console.log('| ▼ ', 'Parameters');
  }

  if (typeof window !== 'undefined') {
    console.log('(2:21)', 'a:', a);
  } else {
    console.log('| | ', '(2:21)', 'a:', a);
  }

  if (typeof window !== 'undefined') {
    console.log('(2:24)', 'b:', b);
  } else {
    console.log('| | ', '(2:24)', 'b:', b);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Parameters');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Variables');
  } else {
    console.log('| ▼ ', 'Variables');
  }

  if (typeof window !== 'undefined') {
    console.log('(3:8)', 'c:', c);
  } else {
    console.log('| | ', '(3:8)', 'c:', c);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Variables');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Return');
  } else {
    console.log('| ▼ ', 'Return');
  }

  if (typeof window !== 'undefined') {
    console.log('(5:9)', a + b + c);
  } else {
    console.log('| | ', '(5:9)', a + b + c);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Return');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Script');
  } else {
    console.log('| ▼ ', 'Script');
  }

  if (typeof window !== 'undefined') {
    console.log('(2:6) const add = function(a, b) => {...}');
  } else {
    console.log('| | ', '(2:6) const add = function(a, b) => {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Script');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('(2:6) const add = function(a, b) => {...}');
  }

  return a + b + c;
};
"
`;

exports[`8. macros 1`] = `
"
import scope from './scope.macro';
let add = function(a, b) {
  const c = 10;
  scope('Custom add function message');
  return a + b + c;
}

      ↓ ↓ ↓ ↓ ↓ ↓

let add = function (a, b) {
  const c = 10;
  console.log('Custom add function message');

  if (typeof window !== 'undefined') {
    console.groupCollapsed('(2:4) let add = function(a, b) => {...}');
  } else {
    console.log('▼ ', '(2:4) let add = function(a, b) => {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Parameters');
  } else {
    console.log('| ▼ ', 'Parameters');
  }

  if (typeof window !== 'undefined') {
    console.log('(2:19)', 'a:', a);
  } else {
    console.log('| | ', '(2:19)', 'a:', a);
  }

  if (typeof window !== 'undefined') {
    console.log('(2:22)', 'b:', b);
  } else {
    console.log('| | ', '(2:22)', 'b:', b);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Parameters');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Variables');
  } else {
    console.log('| ▼ ', 'Variables');
  }

  if (typeof window !== 'undefined') {
    console.log('(3:8)', 'c:', c);
  } else {
    console.log('| | ', '(3:8)', 'c:', c);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Variables');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Return');
  } else {
    console.log('| ▼ ', 'Return');
  }

  if (typeof window !== 'undefined') {
    console.log('(5:9)', a + b + c);
  } else {
    console.log('| | ', '(5:9)', a + b + c);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Return');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Script');
  } else {
    console.log('| ▼ ', 'Script');
  }

  if (typeof window !== 'undefined') {
    console.log('(2:4) let add = function(a, b) => {...}');
  } else {
    console.log('| | ', '(2:4) let add = function(a, b) => {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Script');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('(2:4) let add = function(a, b) => {...}');
  }

  return a + b + c;
};
"
`;

exports[`9. macros 1`] = `
"
import scope from './scope.macro';
const add = (a, b) => {
  const c = 10;
  scope('Custom add function message');
  return a + b + c;
}

      ↓ ↓ ↓ ↓ ↓ ↓

const add = (a, b) => {
  const c = 10;
  console.log('Custom add function message');

  if (typeof window !== 'undefined') {
    console.groupCollapsed('(2:6) const add = (a, b) => {...}');
  } else {
    console.log('▼ ', '(2:6) const add = (a, b) => {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Parameters');
  } else {
    console.log('| ▼ ', 'Parameters');
  }

  if (typeof window !== 'undefined') {
    console.log('(2:13)', 'a:', a);
  } else {
    console.log('| | ', '(2:13)', 'a:', a);
  }

  if (typeof window !== 'undefined') {
    console.log('(2:16)', 'b:', b);
  } else {
    console.log('| | ', '(2:16)', 'b:', b);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Parameters');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Variables');
  } else {
    console.log('| ▼ ', 'Variables');
  }

  if (typeof window !== 'undefined') {
    console.log('(3:8)', 'c:', c);
  } else {
    console.log('| | ', '(3:8)', 'c:', c);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Variables');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Return');
  } else {
    console.log('| ▼ ', 'Return');
  }

  if (typeof window !== 'undefined') {
    console.log('(5:9)', a + b + c);
  } else {
    console.log('| | ', '(5:9)', a + b + c);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Return');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Script');
  } else {
    console.log('| ▼ ', 'Script');
  }

  if (typeof window !== 'undefined') {
    console.log('(2:6) const add = (a, b) => {...}');
  } else {
    console.log('| | ', '(2:6) const add = (a, b) => {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Script');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('(2:6) const add = (a, b) => {...}');
  }

  return a + b + c;
};
"
`;

exports[`10. macros 1`] = `
"
import scope from './scope.macro';
let add = (a, b) => {
  const c = 10;
  scope('Custom add function message');
  return a + b + c;
}

      ↓ ↓ ↓ ↓ ↓ ↓

let add = (a, b) => {
  const c = 10;
  console.log('Custom add function message');

  if (typeof window !== 'undefined') {
    console.groupCollapsed('(2:4) let add = (a, b) => {...}');
  } else {
    console.log('▼ ', '(2:4) let add = (a, b) => {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Parameters');
  } else {
    console.log('| ▼ ', 'Parameters');
  }

  if (typeof window !== 'undefined') {
    console.log('(2:11)', 'a:', a);
  } else {
    console.log('| | ', '(2:11)', 'a:', a);
  }

  if (typeof window !== 'undefined') {
    console.log('(2:14)', 'b:', b);
  } else {
    console.log('| | ', '(2:14)', 'b:', b);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Parameters');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Variables');
  } else {
    console.log('| ▼ ', 'Variables');
  }

  if (typeof window !== 'undefined') {
    console.log('(3:8)', 'c:', c);
  } else {
    console.log('| | ', '(3:8)', 'c:', c);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Variables');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Return');
  } else {
    console.log('| ▼ ', 'Return');
  }

  if (typeof window !== 'undefined') {
    console.log('(5:9)', a + b + c);
  } else {
    console.log('| | ', '(5:9)', a + b + c);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Return');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Script');
  } else {
    console.log('| ▼ ', 'Script');
  }

  if (typeof window !== 'undefined') {
    console.log('(2:4) let add = (a, b) => {...}');
  } else {
    console.log('| | ', '(2:4) let add = (a, b) => {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Script');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('(2:4) let add = (a, b) => {...}');
  }

  return a + b + c;
};
"
`;

exports[`11. macros 1`] = `
"
import scope from './scope.macro';
const add = (a) => (b) => {
  const c = 10;
  scope('Custom add function message');
  return a + b + c;
}

      ↓ ↓ ↓ ↓ ↓ ↓

const add = a => b => {
  const c = 10;
  console.log('Custom add function message');

  if (typeof window !== 'undefined') {
    console.groupCollapsed('(2:0) const add = (a) => (b) => {...}');
  } else {
    console.log('▼ ', '(2:0) const add = (a) => (b) => {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Parameters');
  } else {
    console.log('| ▼ ', 'Parameters');
  }

  if (typeof window !== 'undefined') {
    console.log('(2:13)', 'a:', a);
  } else {
    console.log('| | ', '(2:13)', 'a:', a);
  }

  if (typeof window !== 'undefined') {
    console.log('(2:20)', 'b:', b);
  } else {
    console.log('| | ', '(2:20)', 'b:', b);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Parameters');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Variables');
  } else {
    console.log('| ▼ ', 'Variables');
  }

  if (typeof window !== 'undefined') {
    console.log('(3:8)', 'c:', c);
  } else {
    console.log('| | ', '(3:8)', 'c:', c);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Variables');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Return');
  } else {
    console.log('| ▼ ', 'Return');
  }

  if (typeof window !== 'undefined') {
    console.log('(5:9)', a + b + c);
  } else {
    console.log('| | ', '(5:9)', a + b + c);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Return');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Script');
  } else {
    console.log('| ▼ ', 'Script');
  }

  if (typeof window !== 'undefined') {
    console.log('(2:6) const add = (a) => {...}');
  } else {
    console.log('| | ', '(2:6) const add = (a) => {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Script');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('(2:0) const add = (a) => (b) => {...}');
  }

  return a + b + c;
};
"
`;

exports[`12. macros 1`] = `
"
import scope from './scope.macro';
function add(a) {
  return (b) => {
    const c = 10;
    scope('Custom add function message');
    return a + b + c;
  }
}

      ↓ ↓ ↓ ↓ ↓ ↓

function add(a) {
  return b => {
    const c = 10;
    console.log('Custom add function message');

    if (typeof window !== 'undefined') {
      console.groupCollapsed('(2:0) const add = (a) => (b) => {...}');
    } else {
      console.log('▼ ', '(2:0) const add = (a) => (b) => {...}');
    }

    if (typeof window !== 'undefined') {
      console.groupCollapsed('Parameters');
    } else {
      console.log('| ▼ ', 'Parameters');
    }

    if (typeof window !== 'undefined') {
      console.log('(2:13)', 'a:', a);
    } else {
      console.log('| | ', '(2:13)', 'a:', a);
    }

    if (typeof window !== 'undefined') {
      console.log('(3:10)', 'b:', b);
    } else {
      console.log('| | ', '(3:10)', 'b:', b);
    }

    if (typeof window !== 'undefined') {
      console.groupEnd('Parameters');
    }

    if (typeof window !== 'undefined') {
      console.groupCollapsed('Variables');
    } else {
      console.log('| ▼ ', 'Variables');
    }

    if (typeof window !== 'undefined') {
      console.log('(4:10)', 'c:', c);
    } else {
      console.log('| | ', '(4:10)', 'c:', c);
    }

    if (typeof window !== 'undefined') {
      console.groupEnd('Variables');
    }

    if (typeof window !== 'undefined') {
      console.groupCollapsed('Return');
    } else {
      console.log('| ▼ ', 'Return');
    }

    if (typeof window !== 'undefined') {
      console.log('(6:11)', a + b + c);
    } else {
      console.log('| | ', '(6:11)', a + b + c);
    }

    if (typeof window !== 'undefined') {
      console.groupEnd('Return');
    }

    if (typeof window !== 'undefined') {
      console.groupCollapsed('Script');
    } else {
      console.log('| ▼ ', 'Script');
    }

    if (typeof window !== 'undefined') {
      console.log('(2:9) function add(a) {...}');
    } else {
      console.log('| | ', '(2:9) function add(a) {...}');
    }

    if (typeof window !== 'undefined') {
      console.groupEnd('Script');
    }

    if (typeof window !== 'undefined') {
      console.groupEnd('(2:0) const add = (a) => (b) => {...}');
    }

    return a + b + c;
  };
}
"
`;

exports[`13. macros 1`] = `
"
import scope from './scope.macro';
const add = function (a) {
  return function(b) {
    const c = 10;
    scope('Custom add function message');
    return a + b + c;
  }
}

      ↓ ↓ ↓ ↓ ↓ ↓

const add = function (a) {
  return function (b) {
    const c = 10;
    console.log('Custom add function message');

    if (typeof window !== 'undefined') {
      console.groupCollapsed('(2:0) const add = (a) => (b) => {...}');
    } else {
      console.log('▼ ', '(2:0) const add = (a) => (b) => {...}');
    }

    if (typeof window !== 'undefined') {
      console.groupCollapsed('Parameters');
    } else {
      console.log('| ▼ ', 'Parameters');
    }

    if (typeof window !== 'undefined') {
      console.log('(2:22)', 'a:', a);
    } else {
      console.log('| | ', '(2:22)', 'a:', a);
    }

    if (typeof window !== 'undefined') {
      console.log('(3:18)', 'b:', b);
    } else {
      console.log('| | ', '(3:18)', 'b:', b);
    }

    if (typeof window !== 'undefined') {
      console.groupEnd('Parameters');
    }

    if (typeof window !== 'undefined') {
      console.groupCollapsed('Variables');
    } else {
      console.log('| ▼ ', 'Variables');
    }

    if (typeof window !== 'undefined') {
      console.log('(4:10)', 'c:', c);
    } else {
      console.log('| | ', '(4:10)', 'c:', c);
    }

    if (typeof window !== 'undefined') {
      console.groupEnd('Variables');
    }

    if (typeof window !== 'undefined') {
      console.groupCollapsed('Return');
    } else {
      console.log('| ▼ ', 'Return');
    }

    if (typeof window !== 'undefined') {
      console.log('(6:11)', a + b + c);
    } else {
      console.log('| | ', '(6:11)', a + b + c);
    }

    if (typeof window !== 'undefined') {
      console.groupEnd('Return');
    }

    if (typeof window !== 'undefined') {
      console.groupCollapsed('Script');
    } else {
      console.log('| ▼ ', 'Script');
    }

    if (typeof window !== 'undefined') {
      console.log('(2:6) const add = function(a) => {...}');
    } else {
      console.log('| | ', '(2:6) const add = function(a) => {...}');
    }

    if (typeof window !== 'undefined') {
      console.groupEnd('Script');
    }

    if (typeof window !== 'undefined') {
      console.groupEnd('(2:0) const add = (a) => (b) => {...}');
    }

    return a + b + c;
  };
};
"
`;

exports[`14. macros 1`] = `
"
import scope from './scope.macro';
const add = function (a) {
  return function(b) {
    return c => {
      const d = 10;
      scope('Custom add function message');
      return a + b + c + d;
    }
  }
}

      ↓ ↓ ↓ ↓ ↓ ↓

const add = function (a) {
  return function (b) {
    return c => {
      const d = 10;
      console.log('Custom add function message');

      if (typeof window !== 'undefined') {
        console.groupCollapsed('(2:0) const add = (a) => (b) => (c) => {...}');
      } else {
        console.log('▼ ', '(2:0) const add = (a) => (b) => (c) => {...}');
      }

      if (typeof window !== 'undefined') {
        console.groupCollapsed('Parameters');
      } else {
        console.log('| ▼ ', 'Parameters');
      }

      if (typeof window !== 'undefined') {
        console.log('(2:22)', 'a:', a);
      } else {
        console.log('| | ', '(2:22)', 'a:', a);
      }

      if (typeof window !== 'undefined') {
        console.log('(3:18)', 'b:', b);
      } else {
        console.log('| | ', '(3:18)', 'b:', b);
      }

      if (typeof window !== 'undefined') {
        console.log('(4:11)', 'c:', c);
      } else {
        console.log('| | ', '(4:11)', 'c:', c);
      }

      if (typeof window !== 'undefined') {
        console.groupEnd('Parameters');
      }

      if (typeof window !== 'undefined') {
        console.groupCollapsed('Variables');
      } else {
        console.log('| ▼ ', 'Variables');
      }

      if (typeof window !== 'undefined') {
        console.log('(5:12)', 'd:', d);
      } else {
        console.log('| | ', '(5:12)', 'd:', d);
      }

      if (typeof window !== 'undefined') {
        console.groupEnd('Variables');
      }

      if (typeof window !== 'undefined') {
        console.groupCollapsed('Return');
      } else {
        console.log('| ▼ ', 'Return');
      }

      if (typeof window !== 'undefined') {
        console.log('(7:13)', a + b + c + d);
      } else {
        console.log('| | ', '(7:13)', a + b + c + d);
      }

      if (typeof window !== 'undefined') {
        console.groupEnd('Return');
      }

      if (typeof window !== 'undefined') {
        console.groupCollapsed('Script');
      } else {
        console.log('| ▼ ', 'Script');
      }

      if (typeof window !== 'undefined') {
        console.log('(2:6) const add = function(a) => {...}');
      } else {
        console.log('| | ', '(2:6) const add = function(a) => {...}');
      }

      if (typeof window !== 'undefined') {
        console.groupEnd('Script');
      }

      if (typeof window !== 'undefined') {
        console.groupEnd('(2:0) const add = (a) => (b) => (c) => {...}');
      }

      return a + b + c + d;
    };
  };
};
"
`;

exports[`15. macros 1`] = `
"
import scope from './scope.macro';
const add = function (a, b) {
  scope('Custom add function message');
  a + b;
}

      ↓ ↓ ↓ ↓ ↓ ↓

const add = function (a, b) {
  console.log('Custom add function message');

  if (typeof window !== 'undefined') {
    console.groupCollapsed('(2:6) const add = function(a, b) => {...}');
  } else {
    console.log('▼ ', '(2:6) const add = function(a, b) => {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Parameters');
  } else {
    console.log('| ▼ ', 'Parameters');
  }

  if (typeof window !== 'undefined') {
    console.log('(2:22)', 'a:', a);
  } else {
    console.log('| | ', '(2:22)', 'a:', a);
  }

  if (typeof window !== 'undefined') {
    console.log('(2:25)', 'b:', b);
  } else {
    console.log('| | ', '(2:25)', 'b:', b);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Parameters');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Variables');
  } else {
    console.log('| ▼ ', 'Variables');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Variables');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Return');
  } else {
    console.log('| ▼ ', 'Return');
  }

  if (typeof window !== 'undefined') {
    console.log('Void');
  } else {
    console.log('| | ', 'Void');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Return');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Script');
  } else {
    console.log('| ▼ ', 'Script');
  }

  if (typeof window !== 'undefined') {
    console.log('(2:6) const add = function(a, b) => {...}');
  } else {
    console.log('| | ', '(2:6) const add = function(a, b) => {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Script');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('(2:6) const add = function(a, b) => {...}');
  }

  a + b;
};
"
`;

exports[`16. macros 1`] = `
"
import scope from './scope.macro';
const hello = 'hello';
function divide(a, b) {
  return a / b;
}
function add(a, b) {
  scope('Custom add function message');
  return a + b;
}

      ↓ ↓ ↓ ↓ ↓ ↓

const hello = 'hello';
function divide(a, b) {
  return a / b;
}
function add(a, b) {
  console.log('Custom add function message');

  if (typeof window !== 'undefined') {
    console.groupCollapsed('(6:0) function add(a, b) {...}');
  } else {
    console.log('▼ ', '(6:0) function add(a, b) {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Parameters');
  } else {
    console.log('| ▼ ', 'Parameters');
  }

  if (typeof window !== 'undefined') {
    console.log('(6:13)', 'a:', a);
  } else {
    console.log('| | ', '(6:13)', 'a:', a);
  }

  if (typeof window !== 'undefined') {
    console.log('(6:16)', 'b:', b);
  } else {
    console.log('| | ', '(6:16)', 'b:', b);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Parameters');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Variables');
  } else {
    console.log('| ▼ ', 'Variables');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Variables');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Return');
  } else {
    console.log('| ▼ ', 'Return');
  }

  if (typeof window !== 'undefined') {
    console.log('(8:9)', a + b);
  } else {
    console.log('| | ', '(8:9)', a + b);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Return');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Script');
  } else {
    console.log('| ▼ ', 'Script');
  }

  if (typeof window !== 'undefined') {
    console.log('(2:6)', 'hello:', hello);
  } else {
    console.log('| | ', '(2:6)', 'hello:', hello);
  }

  if (typeof window !== 'undefined') {
    console.log('(3:9) function divide(a, b) {...}');
  } else {
    console.log('| | ', '(3:9) function divide(a, b) {...}');
  }

  if (typeof window !== 'undefined') {
    console.log('(6:9) function add(a, b) {...}');
  } else {
    console.log('| | ', '(6:9) function add(a, b) {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Script');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('(6:0) function add(a, b) {...}');
  }

  return a + b;
}
"
`;

exports[`17. macros 1`] = `
"
import scope from './scope.macro';
export default function(state = 0, action) {
  scope('Add one reducer');
  return state + 1;
}

      ↓ ↓ ↓ ↓ ↓ ↓

export default function (state = 0, action) {
  console.log('Add one reducer');

  if (typeof window !== 'undefined') {
    console.groupCollapsed('(2:0) export default function (state, action) {...}');
  } else {
    console.log('▼ ', '(2:0) export default function (state, action) {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Parameters');
  } else {
    console.log('| ▼ ', 'Parameters');
  }

  if (typeof window !== 'undefined') {
    console.log('(2:24)', 'state:', state);
  } else {
    console.log('| | ', '(2:24)', 'state:', state);
  }

  if (typeof window !== 'undefined') {
    console.log('(2:35)', 'action:', action);
  } else {
    console.log('| | ', '(2:35)', 'action:', action);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Parameters');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Variables');
  } else {
    console.log('| ▼ ', 'Variables');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Variables');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Return');
  } else {
    console.log('| ▼ ', 'Return');
  }

  if (typeof window !== 'undefined') {
    console.log('(4:9)', state + 1);
  } else {
    console.log('| | ', '(4:9)', state + 1);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Return');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Script');
  } else {
    console.log('| ▼ ', 'Script');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Script');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('(2:0) export default function (state, action) {...}');
  }

  return state + 1;
}
"
`;

exports[`18. macros 1`] = `
"
import scope from './scope.macro';
export default addOne => (state = 0, action) => {
  scope('Add one reducer');
  return addOne(state);
}

      ↓ ↓ ↓ ↓ ↓ ↓

export default (addOne => (state = 0, action) => {
  console.log('Add one reducer');

  if (typeof window !== 'undefined') {
    console.groupCollapsed('(2:0) export default = (addOne) => (state, action) => {...}');
  } else {
    console.log('▼ ', '(2:0) export default = (addOne) => (state, action) => {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Parameters');
  } else {
    console.log('| ▼ ', 'Parameters');
  }

  if (typeof window !== 'undefined') {
    console.log('(2:15)', 'addOne:', addOne);
  } else {
    console.log('| | ', '(2:15)', 'addOne:', addOne);
  }

  if (typeof window !== 'undefined') {
    console.log('(2:26)', 'state:', state);
  } else {
    console.log('| | ', '(2:26)', 'state:', state);
  }

  if (typeof window !== 'undefined') {
    console.log('(2:37)', 'action:', action);
  } else {
    console.log('| | ', '(2:37)', 'action:', action);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Parameters');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Variables');
  } else {
    console.log('| ▼ ', 'Variables');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Variables');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Return');
  } else {
    console.log('| ▼ ', 'Return');
  }

  if (typeof window !== 'undefined') {
    console.log('(4:9)', addOne(state));
  } else {
    console.log('| | ', '(4:9)', addOne(state));
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Return');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Script');
  } else {
    console.log('| ▼ ', 'Script');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Script');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('(2:0) export default = (addOne) => (state, action) => {...}');
  }

  return addOne(state);
});
"
`;

exports[`19. macros 1`] = `
"
import scope from './scope.macro';
const sum = (...xs) => {
  scope('Sum args');
  return xs.reduce((acc, x) => acc + x, 0);
}

      ↓ ↓ ↓ ↓ ↓ ↓

const sum = (...xs) => {
  console.log('Sum args');

  if (typeof window !== 'undefined') {
    console.groupCollapsed('(2:6) const sum = (xs) => {...}');
  } else {
    console.log('▼ ', '(2:6) const sum = (xs) => {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Parameters');
  } else {
    console.log('| ▼ ', 'Parameters');
  }

  if (typeof window !== 'undefined') {
    console.log('(2:16)', 'xs:', xs);
  } else {
    console.log('| | ', '(2:16)', 'xs:', xs);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Parameters');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Variables');
  } else {
    console.log('| ▼ ', 'Variables');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Variables');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Return');
  } else {
    console.log('| ▼ ', 'Return');
  }

  if (typeof window !== 'undefined') {
    console.log('(4:9)', xs.reduce((acc, x) => acc + x, 0));
  } else {
    console.log('| | ', '(4:9)', xs.reduce((acc, x) => acc + x, 0));
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Return');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Script');
  } else {
    console.log('| ▼ ', 'Script');
  }

  if (typeof window !== 'undefined') {
    console.log('(2:6) const sum = () => {...}');
  } else {
    console.log('| | ', '(2:6) const sum = () => {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Script');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('(2:6) const sum = (xs) => {...}');
  }

  return xs.reduce((acc, x) => acc + x, 0);
};
"
`;

exports[`20. macros 1`] = `
"
import scope from './scope.macro';
const sum = (...xs) => {
  scope('Sum args');
  return xs.reduce((acc, x) => acc + x, 0);
}

const add = (a, b) => {
  scope('Adding stuff up');
  return a + b;
}

      ↓ ↓ ↓ ↓ ↓ ↓

const sum = (...xs) => {
  console.log('Sum args');

  if (typeof window !== 'undefined') {
    console.groupCollapsed('(2:6) const sum = (xs) => {...}');
  } else {
    console.log('▼ ', '(2:6) const sum = (xs) => {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Parameters');
  } else {
    console.log('| ▼ ', 'Parameters');
  }

  if (typeof window !== 'undefined') {
    console.log('(2:16)', 'xs:', xs);
  } else {
    console.log('| | ', '(2:16)', 'xs:', xs);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Parameters');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Variables');
  } else {
    console.log('| ▼ ', 'Variables');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Variables');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Return');
  } else {
    console.log('| ▼ ', 'Return');
  }

  if (typeof window !== 'undefined') {
    console.log('(4:9)', xs.reduce((acc, x) => acc + x, 0));
  } else {
    console.log('| | ', '(4:9)', xs.reduce((acc, x) => acc + x, 0));
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Return');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Script');
  } else {
    console.log('| ▼ ', 'Script');
  }

  if (typeof window !== 'undefined') {
    console.log('(2:6) const sum = () => {...}');
  } else {
    console.log('| | ', '(2:6) const sum = () => {...}');
  }

  if (typeof window !== 'undefined') {
    console.log('(7:6) const add = (a, b) => {...}');
  } else {
    console.log('| | ', '(7:6) const add = (a, b) => {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Script');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('(2:6) const sum = (xs) => {...}');
  }

  return xs.reduce((acc, x) => acc + x, 0);
};

const add = (a, b) => {
  console.log('Adding stuff up');

  if (typeof window !== 'undefined') {
    console.groupCollapsed('(7:6) const add = (a, b) => {...}');
  } else {
    console.log('▼ ', '(7:6) const add = (a, b) => {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Parameters');
  } else {
    console.log('| ▼ ', 'Parameters');
  }

  if (typeof window !== 'undefined') {
    console.log('(7:13)', 'a:', a);
  } else {
    console.log('| | ', '(7:13)', 'a:', a);
  }

  if (typeof window !== 'undefined') {
    console.log('(7:16)', 'b:', b);
  } else {
    console.log('| | ', '(7:16)', 'b:', b);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Parameters');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Variables');
  } else {
    console.log('| ▼ ', 'Variables');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Variables');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Return');
  } else {
    console.log('| ▼ ', 'Return');
  }

  if (typeof window !== 'undefined') {
    console.log('(9:9)', a + b);
  } else {
    console.log('| | ', '(9:9)', a + b);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Return');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Script');
  } else {
    console.log('| ▼ ', 'Script');
  }

  if (typeof window !== 'undefined') {
    console.log('(2:6) const sum = () => {...}');
  } else {
    console.log('| | ', '(2:6) const sum = () => {...}');
  }

  if (typeof window !== 'undefined') {
    console.log('(7:6) const add = (a, b) => {...}');
  } else {
    console.log('| | ', '(7:6) const add = (a, b) => {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Script');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('(7:6) const add = (a, b) => {...}');
  }

  return a + b;
};
"
`;

exports[`21. macros 1`] = `
"
import scope from './scope.macro';
const getApi = async (url) => {
  scope('Requesting some data');
  return await fetch(url);
}

      ↓ ↓ ↓ ↓ ↓ ↓

const getApi = async url => {
  console.log('Requesting some data');

  if (typeof window !== 'undefined') {
    console.groupCollapsed('(2:6) const getApi = (url) => {...}');
  } else {
    console.log('▼ ', '(2:6) const getApi = (url) => {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Parameters');
  } else {
    console.log('| ▼ ', 'Parameters');
  }

  if (typeof window !== 'undefined') {
    console.log('(2:22)', 'url:', url);
  } else {
    console.log('| | ', '(2:22)', 'url:', url);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Parameters');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Variables');
  } else {
    console.log('| ▼ ', 'Variables');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Variables');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Return');
  } else {
    console.log('| ▼ ', 'Return');
  }

  if (typeof window !== 'undefined') {
    console.log('(4:9)', (await fetch(url)));
  } else {
    console.log('| | ', '(4:9)', (await fetch(url)));
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Return');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Script');
  } else {
    console.log('| ▼ ', 'Script');
  }

  if (typeof window !== 'undefined') {
    console.log('(2:6) const getApi = (url) => {...}');
  } else {
    console.log('| | ', '(2:6) const getApi = (url) => {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Script');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('(2:6) const getApi = (url) => {...}');
  }

  return await fetch(url);
};
"
`;

exports[`25. macros 1`] = `
"
import scope from './scope.macro';

const add = (a, b) => {
  scope('Adding stuff up');
  return a + b;
}

      ↓ ↓ ↓ ↓ ↓ ↓

const add = (a, b) => {
  console.log('Adding stuff up');

  if (typeof window !== 'undefined') {
    console.groupCollapsed('(3:6) const add = (a, b) => {...}');
  } else {
    console.log('▼ ', '(3:6) const add = (a, b) => {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Parameters');
  } else {
    console.log('| ▼ ', 'Parameters');
  }

  if (typeof window !== 'undefined') {
    console.log('(3:13)', 'a:', a);
  } else {
    console.log('| | ', '(3:13)', 'a:', a);
  }

  if (typeof window !== 'undefined') {
    console.log('(3:16)', 'b:', b);
  } else {
    console.log('| | ', '(3:16)', 'b:', b);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Parameters');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Variables');
  } else {
    console.log('| ▼ ', 'Variables');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Variables');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Return');
  } else {
    console.log('| ▼ ', 'Return');
  }

  if (typeof window !== 'undefined') {
    console.log('(5:9)', a + b);
  } else {
    console.log('| | ', '(5:9)', a + b);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Return');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Script');
  } else {
    console.log('| ▼ ', 'Script');
  }

  if (typeof window !== 'undefined') {
    console.log('(3:6) const add = (a, b) => {...}');
  } else {
    console.log('| | ', '(3:6) const add = (a, b) => {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Script');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('(3:6) const add = (a, b) => {...}');
  }

  return a + b;
};
"
`;

exports[`26. macros 1`] = `
"
const scope = require('./scope.macro');

const add = (a, b) => {
  scope('Adding stuff up');
  return a + b;
}

      ↓ ↓ ↓ ↓ ↓ ↓

const add = (a, b) => {
  console.log('Adding stuff up');

  if (typeof window !== 'undefined') {
    console.groupCollapsed('(3:6) const add = (a, b) => {...}');
  } else {
    console.log('▼ ', '(3:6) const add = (a, b) => {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Parameters');
  } else {
    console.log('| ▼ ', 'Parameters');
  }

  if (typeof window !== 'undefined') {
    console.log('(3:13)', 'a:', a);
  } else {
    console.log('| | ', '(3:13)', 'a:', a);
  }

  if (typeof window !== 'undefined') {
    console.log('(3:16)', 'b:', b);
  } else {
    console.log('| | ', '(3:16)', 'b:', b);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Parameters');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Variables');
  } else {
    console.log('| ▼ ', 'Variables');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Variables');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Return');
  } else {
    console.log('| ▼ ', 'Return');
  }

  if (typeof window !== 'undefined') {
    console.log('(5:9)', a + b);
  } else {
    console.log('| | ', '(5:9)', a + b);
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Return');
  }

  if (typeof window !== 'undefined') {
    console.groupCollapsed('Script');
  } else {
    console.log('| ▼ ', 'Script');
  }

  if (typeof window !== 'undefined') {
    console.log('(3:6) const add = (a, b) => {...}');
  } else {
    console.log('| | ', '(3:6) const add = (a, b) => {...}');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('Script');
  }

  if (typeof window !== 'undefined') {
    console.groupEnd('(3:6) const add = (a, b) => {...}');
  }

  return a + b;
};
"
`;
